移动部分文件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DailySet"
-        android:name=".provider.DailySetApplication">
+        android:name=".DailySetApplication">
         <activity
             android:name=".MainActivity"
             android:exported="true"
