--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,23 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storePassword keystore_password
+            keyAlias ketstore_alias
+            keyPassword keystore_alias_password
+            storeFile file(keystore_path)
+        }
+
+        release {
+            storePassword keystore_password
+            keyAlias ketstore_alias
+            keyPassword keystore_alias_password
+            storeFile file(keystore_path)
+        }
+    }
+
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -53,7 +70,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha02'
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
 
     // --- implementation LifeCycle Related
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
