--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: rootProject.file("gradle/keystore.gradle")
+
     ext {
         compose_version = '1.0.0-beta01'
     }
