--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    kapt "org.xerial:sqlite-jdbc:3.34.0"
 
     // --- implementation Coroutines Related
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
