modify 迁移基础库版本 1. 将jetpack compose的版本提升到1.0.2

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     apply from: rootProject.file("gradle/keystore.gradle")
 
     ext {
-        compose_version = '1.0.0-beta01'
+        compose_version = '1.0.2'
     }
     repositories {
         maven { url 'https://maven.aliyun.com/repository/google' }
@@ -12,8 +12,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0-alpha02'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
+        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
