--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,12 +59,12 @@ android {
 }
 
 dependencies {
-    def room_version = '2.2.6'
+    def room_version = '2.3.0'
     def coroutines_version = '1.4.1'
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
 
     // -- implementation Compose Related
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -73,10 +73,10 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
 
     // --- implementation LifeCycle Related
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
     // --- implementation Room Related
     implementation "androidx.room:room-ktx:$room_version"
@@ -89,7 +89,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // --- implementation Navigation Related
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
