--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ buildscript {
     apply from: rootProject.file("gradle/keystore.gradle")
 
     ext {
-        compose_version = '1.0.2'
+        kotlin_version = '1.5.21'
     }
+
     repositories {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/public' }
@@ -12,8 +13,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "com.android.tools.build:gradle:$localBuildToolGradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
