--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,28 @@ plugins {
     id 'kotlin-kapt'
 }
 
+ext {
+
+    // androidx support
+    androidx_core_ktx_version = '1.6.0'
+    androidx_room_version = '2.3.0'
+    androidx_appcompact_version = '1.3.1'
+    material_version = '1.4.0'
+    androidx_lifecycle_ktx_version = '2.3.1'
+
+    // compose support
+    compose_version = '1.0.2'
+    androidx_lifecycle_compose_version = '1.0.0-alpha02'
+    androidx_activity_compose_version = '1.3.0-alpha03'
+    androidx_navigation_compose_version = '2.4.0-alpha06'
+
+    // kotlinx support
+    coroutines_version = '1.4.1'
+
+    // others
+    sqlite_jdbc_version = '3.34.0'
+}
+
 android {
     signingConfigs {
         debug {
@@ -22,13 +44,13 @@ android {
     }
 
 
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "org.tty.dailyset"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -54,44 +76,41 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.4.30'
     }
 }
 
 dependencies {
-    def room_version = '2.3.0'
-    def coroutines_version = '1.4.1'
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompact_version"
+    implementation "com.google.android.material:material:$material_version"
 
     // -- implementation Compose Related
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    implementation "androidx.activity:activity-compose:$androidx_activity_compose_version"
 
     // --- implementation LifeCycle Related
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
 
     // --- implementation Room Related
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    kapt "org.xerial:sqlite-jdbc:3.34.0"
+    implementation "androidx.room:room-ktx:$androidx_room_version"
+    implementation "androidx.room:room-runtime:$androidx_room_version"
+    kapt "androidx.room:room-compiler:$androidx_room_version"
+    kapt "org.xerial:sqlite-jdbc:$sqlite_jdbc_version"
 
     // --- implementation Coroutines Related
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // --- implementation Navigation Related
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
+    implementation "androidx.navigation:navigation-compose:$androidx_navigation_compose_version"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
