--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,12 @@ ext {
 
     // compose support
     compose_version = '1.0.2'
-    androidx_lifecycle_compose_version = '1.0.0-alpha02'
-    androidx_activity_compose_version = '1.3.0-alpha03'
-    androidx_navigation_compose_version = '2.4.0-alpha06'
+    androidx_lifecycle_compose_version = '1.0.0-alpha02' // don't update.
+    androidx_activity_compose_version = '1.3.0-alpha03' // don't update.
+    androidx_navigation_compose_version = '2.4.0-alpha06' // don't update.
+
+    // accompanist support
+    accompanist_version = '0.16.0' // don't update.
 
     // kotlinx support
     coroutines_version = '1.4.1'
@@ -109,6 +112,10 @@ dependencies {
 
     // --- implementation Navigation Related
     implementation "androidx.navigation:navigation-compose:$androidx_navigation_compose_version"
+
+    // --- implementation accompanist related
+    implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
