--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,27 +6,6 @@ plugins {
 
 ext {
 
-    // androidx support
-    androidx_core_ktx_version = '1.6.0'
-    androidx_room_version = '2.3.0'
-    androidx_appcompact_version = '1.3.1'
-    material_version = '1.4.0'
-    androidx_lifecycle_ktx_version = '2.3.1'
-
-    // compose support
-    compose_version = '1.0.2'
-    androidx_lifecycle_compose_version = '1.0.0-alpha02' // don't update.
-    androidx_activity_compose_version = '1.3.0-alpha03' // don't update.
-    androidx_navigation_compose_version = '2.4.0-alpha06' // don't update.
-
-    // accompanist support
-    accompanist_version = '0.16.0' // don't update.
-
-    // kotlinx support
-    coroutines_version = '1.4.1'
-
-    // others
-    sqlite_jdbc_version = '3.34.0'
 }
 
 android {
@@ -47,13 +26,13 @@ android {
     }
 
 
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion localBuildToolVersion
 
     defaultConfig {
         applicationId "org.tty.dailyset"
-        minSdkVersion 26
-        targetSdkVersion 31
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -83,22 +62,23 @@ android {
 }
 
 dependencies {
+    implementation project(":common")
 
-    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
-    implementation "androidx.appcompat:appcompat:$androidx_appcompact_version"
-    implementation "com.google.android.material:material:$material_version"
+//    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
+//    implementation "androidx.appcompat:appcompat:$androidx_appcompact_version"
+//    implementation "com.google.android.material:material:$material_version"
 
     // -- implementation Compose Related
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.activity:activity-compose:$androidx_activity_compose_version"
+//    implementation "androidx.compose.ui:ui:$compose_version"
+//    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+//    implementation "androidx.compose.material:material:$compose_version"
+//    implementation "androidx.activity:activity-compose:$androidx_activity_compose_version"
 
     // --- implementation LifeCycle Related
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
+//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
+//    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
 
     // --- implementation Room Related
     implementation "androidx.room:room-ktx:$androidx_room_version"
@@ -107,8 +87,8 @@ dependencies {
     kapt "org.xerial:sqlite-jdbc:$sqlite_jdbc_version"
 
     // --- implementation Coroutines Related
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // --- implementation Navigation Related
     implementation "androidx.navigation:navigation-compose:$androidx_navigation_compose_version"
@@ -117,7 +97,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_version"
     implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_espresso_veresion"
 }
