--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
 
     repositories {
+        // use local distributions
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         google()
@@ -18,6 +19,42 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    ext {
+        // metadata
+        minSdkVersion = 26
+        targetSdkVersion = 31
+        compileSdkVersion = 31
+
+        // androidx support
+        androidx_core_ktx_version = '1.6.0'
+        androidx_room_version = '2.3.0'
+        androidx_appcompact_version = '1.3.1'
+        material_version = '1.4.0'
+        androidx_lifecycle_ktx_version = '2.3.1'
+
+        // compose support
+        compose_version = '1.0.2'
+        androidx_lifecycle_compose_version = '1.0.0-alpha02' // don't update.
+        androidx_activity_compose_version = '1.3.0-alpha03' // don't update.
+        androidx_navigation_compose_version = '2.4.0-alpha06' // don't update.
+
+        // accompanist support
+        accompanist_version = '0.16.0' // don't update.
+
+        // kotlinx support
+        coroutines_version = '1.4.1'
+
+        // others
+        sqlite_jdbc_version = '3.34.0'
+
+        // test
+        junit_version = '4.13.2'
+        androidx_junit_version = '1.1.3'
+        androidx_espresso_veresion = '3.4.0'
     }
 }
 
