--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
+
 rootProject.name = "DailySet"
 include ':app'
+include ':common'
