--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.util.concurrent.TimeUnit
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     apply from: rootProject.file("gradle/keystore.gradle")
@@ -7,6 +9,7 @@ buildscript {
     }
 
     repositories {
+        mavenLocal()
         // use local distributions
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/public' }
@@ -51,11 +54,20 @@ allprojects {
         // others
         sqlite_jdbc_version = '3.34.0'
 
+        // foundation
+        dioc_version = '1.0.0-rc01'
+
         // test
         junit_version = '4.13.2'
         androidx_junit_version = '1.1.3'
         androidx_espresso_veresion = '3.4.0'
     }
+
+    configurations.all {
+        resolutionStrategy.cacheChangingModulesFor 0, TimeUnit.SECONDS
+        resolutionStrategy.cacheDynamicVersionsFor 0, TimeUnit.SECONDS
+    }
+
 }
 
 task clean(type: Delete) {
