--- a/settings.gradle
+++ b/settings.gradle
@@ -8,12 +8,14 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        mavenLocal()
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         google()
         mavenCentral()
     }
 }
+
 
 rootProject.name = "DailySet"
 include ':app'
