--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,21 +60,21 @@ android {
 dependencies {
     implementation project(":common")
 
-//    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
-//    implementation "androidx.appcompat:appcompat:$androidx_appcompact_version"
-//    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompact_version"
+    implementation "com.google.android.material:material:$material_version"
 
     // -- implementation Compose Related
-//    implementation "androidx.compose.ui:ui:$compose_version"
-//    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-//    implementation "androidx.compose.material:material:$compose_version"
-//    implementation "androidx.activity:activity-compose:$androidx_activity_compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.activity:activity-compose:$androidx_activity_compose_version"
 
     // --- implementation LifeCycle Related
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
-//    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
 
     // --- implementation Room Related
     implementation "androidx.room:room-ktx:$androidx_room_version"
@@ -83,8 +83,8 @@ dependencies {
     kapt "org.xerial:sqlite-jdbc:$sqlite_jdbc_version"
 
     // --- implementation Coroutines Related
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // --- implementation Navigation Related
     implementation "androidx.navigation:navigation-compose:$androidx_navigation_compose_version"
