--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,24 +38,24 @@ android {
 dependencies {
 
     // --- androidx
-    api "androidx.core:core-ktx:$androidx_core_ktx_version"
-    api "androidx.appcompat:appcompat:$androidx_appcompact_version"
-    api "com.google.android.material:material:$material_version"
+    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompact_version"
+    implementation "com.google.android.material:material:$material_version"
 
     // -- implementation Compose Related
-    api "androidx.compose.ui:ui:$compose_version"
-    api "androidx.compose.ui:ui-tooling:$compose_version"
-    api "androidx.compose.material:material:$compose_version"
-    api "androidx.activity:activity-compose:$androidx_activity_compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.activity:activity-compose:$androidx_activity_compose_version"
 
     // --- implementation LifeCycle Related
-    api "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
-    api "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
-    api "androidx.compose.runtime:runtime-livedata:$compose_version"
-    api "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ktx_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ktx_version"
 
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // --- foundation library
     api "org.tty.dioc:dioc:$dioc_version"
