--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,14 @@ buildscript {
     apply from: rootProject.file("gradle/keystore.gradle")
 
     ext {
-        kotlin_version = '1.5.21'
+        kotlin_version = '1.6.10'
     }
 
     repositories {
+
         mavenLocal()
-        // use local distributions
-        mavenLocal()
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/public' }
         google()
         mavenCentral()
     }
@@ -35,19 +34,19 @@ allprojects {
 
         // androidx support
         androidx_core_ktx_version = '1.6.0'
-        androidx_room_version = '2.3.0'
+        androidx_room_version = '2.4.2'
         androidx_appcompact_version = '1.3.1'
         material_version = '1.4.0'
         androidx_lifecycle_ktx_version = '2.3.1'
 
         // compose support
-        compose_version = '1.0.2'
-        androidx_lifecycle_compose_version = '1.0.0-alpha02' // don't update.
-        androidx_activity_compose_version = '1.3.0-alpha03' // don't update.
-        androidx_navigation_compose_version = '2.4.0-alpha06' // don't update.
+        compose_version = '1.1.1'
+        androidx_lifecycle_compose_version = '2.4.1' // don't update.
+        androidx_activity_compose_version = '1.4.0' // don't update.
+        androidx_navigation_compose_version = '2.4.2' // don't update.
 
         // accompanist support
-        accompanist_version = '0.16.0' // don't update.
+        accompanist_version = '0.23.0' // don't update.
 
         // kotlinx support
         coroutines_version = '1.4.1'
@@ -73,4 +72,11 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalAnimationApi"
+        freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalFoundationApi"
+    }
 }
