--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,24 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
+    id 'com.google.protobuf'
+
 }
 
 android {
+    sourceSets {
+        main {
+            proto {
+                srcDir "/src/main/proto"
+            }
+            java {
+                srcDir "${buildDir}/generated/source/proto/main/java"
+                srcDir "${buildDir}/generated/source/proto/main/kotlin"
+                srcDir "${buildDir}/generated/source/proto/main/coroutines"
+            }
+        }
+    }
+
     signingConfigs {
         debug {
             storePassword keystore_password
@@ -58,6 +73,8 @@ android {
     }
 }
 
+
+
 dependencies {
     implementation project(":common")
 
@@ -102,7 +119,56 @@ dependencies {
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
 
+    // --- implementation grpc related
+    implementation("io.grpc:grpc-stub:${grpcVersion}")
+    implementation("io.grpc:grpc-protobuf-lite:${grpcVersion}")
+    implementation("javax.annotation:javax.annotation-api:1.3.2")
+
+//    implementation("com.github.marcoferrer.krotoplus:kroto-plus-coroutines:${krotoPlusVersion}")
+//    implementation("com.github.marcoferrer.krotoplus:kroto-plus-message:${krotoPlusVersion}")
+
+
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_espresso_veresion"
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:${protobufVersion}"
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+        javalite {
+            artifact = "com.google.protobuf:protoc-gen-java-lite:${protobufVersion}"
+        }
+//        coroutines {
+//            artifact = "com.github.marcoferrer.krotoplus:protoc-gen-grpc-coroutines:${krotoPlusVersion}:jvm8@jar"
+//        }
+//        kroto {
+//            artifact = "com.github.marcoferrer.krotoplus:protoc-gen-kroto-plus:$krotoPlusVersion:jvm8@jar"
+//        }
+    }
+    generateProtoTasks {
+        def krotoConfig = file("krotoPlusConfig.config")
+        all().each { task ->
+            task.inputs.files krotoConfig
+            task.builtins {
+                java { option 'lite' }
+            }
+            task.plugins {
+                grpc {
+                    option 'lite'
+                }
+//                coroutines {}
+//                kroto {
+//                    outputSubDir = "java"
+//                    option "ConfigPath = ${krotoConfig}"
+//                }
+            }
+        }
+
+    }
 }
