--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$localBuildToolGradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.18"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -61,6 +62,13 @@ allprojects {
         junit_version = '4.13.2'
         androidx_junit_version = '1.1.3'
         androidx_espresso_veresion = '3.4.0'
+
+        // krotoPlusVersion
+        krotoPlusVersion = '0.6.1'
+        coroutinesVersion = '1.6.1'
+        grpcVersion = '1.45.1'
+        protobufVersion = '3.20.0'
+        liteVersion = '3.0.0'
     }
 
     configurations.all {
