--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,13 @@ plugins {
 }
 
 android {
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
     sourceSets {
         main {
             proto {
@@ -24,14 +31,14 @@ android {
     signingConfigs {
         debug {
             storePassword keystore_password
-            keyAlias ketstore_alias
+            keyAlias keystore_alias
             keyPassword keystore_alias_password
             storeFile file(keystore_path)
         }
 
         release {
             storePassword keystore_password
-            keyAlias ketstore_alias
+            keyAlias keystore_alias
             keyPassword keystore_alias_password
             storeFile file(keystore_path)
         }
@@ -46,7 +53,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0-alpha01"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -55,6 +62,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
