--- a/gradle/keystore.gradle
+++ b/gradle/keystore.gradle
@@ -1,4 +1,4 @@
-ext.keystore_password = '123456'
-ext.ketstore_alias = 'test0'
-ext.keystore_alias_password = '123456'
-ext.keystore_path = '../gradle/all.jks'
+ext.keystore_password = '12345678'
+ext.keystore_alias = 'dailyset'
+ext.keystore_alias_password = '12345678'
+ext.keystore_path = '../gradle/dailyset.jks'
